--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,102 @@
-# Ignore .out files
-*.out
+# Compiled object files
+*.o
+*.obj
+*.ko
+*.elf
 
-# Ignore .out files in any directory
-**/*.out
-# Ignore .exe files
-*.exe   
+# Executable files
+*.out
+*.exe
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Static libraries
+*.a
+*.lib
+
+# Shared libraries
+*.so
+*.so.*
+*.dylib
+*.dll
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Preprocessor output
+*.i
+*.s
+
+# Assembly files from C
+*.s
+
+# Dependency files
+*.d
+
+# Core dumps
+core
+core.*
+
+# Backup files
+*~
+*.swp
+*.swo
+*.bak
+*.tmp
+*.orig
+
+# IDE and editor files
+.vscode/settings.json
+.vscode/launch.json
+.vscode/extensions.json
+*.code-workspace
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Build directories
+build/
+dist/
+bin/
+obj/
+
+# CMake
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
+*.cmake
+
+# Autotools
+/autom4te.cache
+/aclocal.m4
+/compile
+/configure
+/depcomp
+/install-sh
+/missing
+/stamp-h1
+config.log
+config.status
+
+# Coverage reports
+*.gcov
+*.gcda
+*.gcno
+
+# Valgrind
+*.valgrind
+
+# Specific to your project
+stats.out
